[package]
name = "sharelist"
version = "1.3.4"
description = "A todo list application with sharing mechanism via email."
authors = ["antipro"]
edition = "2021"

[lib]
name = "sharelist_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
